margin fix on mobile

--- a/src/css/Content.css
+++ b/src/css/Content.css
@@ -428,6 +428,10 @@ input[type=text]:focus {
         width: 100%;
     }
 
+    .row.post-message {
+        margin-top: 0 !important;
+    }
+
     i.big.icons {
         position: relative;
         top: 10px;
